<resources>
    <string name="app_name">BaseProjectAndroid</string>
    <string name="lbl_login">LOGIN</string>
    <string name="lbl_login_1">Login</string>
    <string name="lbl_email_address">Email Address</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_remember_me">Remember me</string>
    <string name="lbl_hint_search">Enter your search</string>
    <string name="lbl_hint_nameice">ICE - CREAM</string>
    <string name="lbl_hint_money">25.000</string>
    <string name="lbl_err_invalid_email">Email invalid</string>
    <string name="lbl_err_invalid_password">Password invalid</string>
    <string name="lbl_menu">Menu</string>
    <string name="lbl_table">Table</string>
    <string name="lbl_hint_code_bill">Mã Hóa Đơn</string>
    <string name="lbl_hint_date_bill">Ngày/Tháng/Năm</string>
    <string name="lbl_hint_sum_bill">Tổng Bill:</string>
    <string name="lbl_hint_account_demo">Account Demo</string>
    <string name="lbl_hint_role">Role</string>
    <string name="lbl_staft">Staft</string>
    <string name="lbl_bill">Bill</string>
    <string name="lbl_add_new">Add new</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_image">Image</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_number">Number</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_err_name_invalid">Name invalid</string>
    <string name="lbl_err_number_invalid">Number invalid</string>
    <string name="lbl_err_price_invalid">Price invalid</string>
    <string name="lbl_err_image_invalid">Please choose your picture</string>
    <string name="lbl_err_age_invalid">Age invalid</string>
    <string name="lbl_err_address_invalid">Address invalid</string>
    <string name="lbl_err_phone_invalid">Phone invalid</string>
    <string name="lbl_full_name">Full name</string>
    <string name="lbl_age">Age</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_phone_number">Phone number</string>
    <string name="lbl_roles">Role</string>
    <string name="lbl_avatar">Avatar</string>
    <string name="lbl_update">Update</string>
    <string name="lbl_remove_dialog">Are you sure you want to delete</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_wellcome">Wellcome</string>

</resources>