<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/h1B1E28">

    <RelativeLayout
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/ic_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-20dp"
            android:src="@drawable/ic_logo" />

        <com.example.baseprojectandroid.compoments.custom_view.Login_bg
            android:id="@+id/login_bg"
            android:layout_width="331dp"
            android:layout_height="438dp"
            android:layout_below="@+id/ic_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-50dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@+id/login_bg"
            android:id="@+id/btn_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-25dp"
            android:layout_marginBottom="@dimen/textSize15"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:hardwareAccelerated="true"
            app:cardBackgroundColor="@color/hFF2D66"
            app:cardCornerRadius="30dp"
            app:cardElevation="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/lbl_login"
                android:textColor="#fff"
                android:textSize="@dimen/textSize17"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/login_bg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:text="@string/lbl_login_1"
            android:textColor="#fff"
            android:textSize="@dimen/textSize33" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_login"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="63dp"
            android:layout_marginRight="33dp"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/h707070"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="10dp"
                android:id="@+id/edt_email"
                android:textColor="#fff"
                android:hint="@string/lbl_email_address"
                android:inputType="textEmailAddress"
                android:textColorHint="#fff"
                android:textSize="@dimen/textSize15" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="38dp"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/h707070"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:hint="@string/lbl_password"
                    android:password="true"
                    android:id="@+id/edt_pass"
                    android:textColor="#fff"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#fff"
                    android:textSize="@dimen/textSize15" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:id="@+id/img_show_pass"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_show_pass"/>
            </RelativeLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:drawablePadding="10dp"
                android:id="@+id/check_box"
                android:text="@string/lbl_remember_me"
                android:textColor="#fff"
                android:textSize="@dimen/textSize13" />
        </LinearLayout>
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>