<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:background="@drawable/boder_menuimg"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="18dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:gravity="center"
        android:layout_marginBottom="25dp">
        <ImageView
            android:layout_marginTop="18dp"
            android:layout_marginLeft="21dp"
            android:layout_marginBottom="25dp"
            android:id="@+id/img_bill"
            android:scaleType="fitXY"
            android:src="@drawable/img_bill"
            android:layout_width="50dp"
            android:layout_height="50dp"/>
        <LinearLayout
            android:layout_marginTop="9dp"
            android:layout_marginLeft="21dp"
            android:layout_marginBottom="9dp"
            android:id="@+id/linearBill"
            android:layout_toRightOf="@+id/img_bill"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_code_bill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_hint_code_bill"
                android:textColorHint="@color/h000000"
                android:textSize="@dimen/textMenu"
                android:textColor="@color/h000000"/>
            <TextView
                android:id="@+id/txt_date_bill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_hint_date_bill"
                android:textColorHint="@color/h000000"
                android:textSize="@dimen/textSize15"
                android:textColor="@color/h000000"/>
            <TextView
                android:id="@+id/txt_sum_bill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_hint_sum_bill"
                android:textColorHint="@color/h000000"
                android:textSize="@dimen/textSize15"
                android:textColor="@color/h000000" />
        </LinearLayout>
        <ImageView
            android:scaleType="fitXY"
            android:layout_alignParentRight="true"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_tick"
            android:layout_marginRight="25dp"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="25dp"/>
    </RelativeLayout>
</RelativeLayout>